<resources>
    <string-array name="tipo_documentos">
        <item>Contrato</item>
        <item>Reserva</item>
        <item>Ficha Cliente</item>
        <item>Ficha Empresa/Comisión</item>
    </string-array>
    <string name="app_name" translatable="false">Carplus365 3G</string>
    <string name="respantalla">La resolucion de la pantalla es demasiado pequeña para esta aplicación</string>
    <string name="serverout">No se ha podido establecer comunicación con el servidor</string>
    <string name="retry">Por favor, inténtelo de nuevo en unos segundos</string>
    <string name="titleinit">Inicializando la aplicación</string>
    <string name="msginit">Obteniendo datos del servidor</string>
    <string name="erroractu">No se ha podido descargar la actualización</string>
    <string name="noidentiterm">No se ha podido identificar el terminal, vuelva a entrar</string>
    <string name="accesblock">El acceso desde este terminal esta bloqueado</string>
    <string name="actumanual">Debes actualizar la aplicación manualmente para poder usarla, contacte con Cargestion. Gracias!</string>
    <string name="canuse">Para usar esta aplicación contacte con Cargestión al +34 952 057 072 ó en WWW.CARGESTION.COM</string>
    <string name="errorinicio">Error iniciando aplicación</string>
    <string name="titledesvinc">Desvincular terminal</string>
    <string name="msgdesvinc">¿Está seguro que desea dar de baja este terminal?</string>
    <string name="msgserv">Recibiendo datos del servidor</string>
    <string name="titleserv">Comprobando usuario…</string>
    <string name="welcome">Bienvenido a Carplus3G</string>
    <string name="exit">Salir</string>
    <string name="desvinc">Desvincular</string>
    <string name="cleandata">Limpiar datos</string>
    <string name="send">Enviar</string>
    <string name="user_email">Email de usuario</string>
    <string name="password">Contraseña</string>
    <string name="textclaveactivacion">Para obtener la clave de activación, deberá contactar con cargestión y facilitarle el Nº de serie del terminal. \nEs importante que facilite dicho numero tal y como lo ve con mayusculas y minusculas</string>
    <string name="serie">Nº serie terminal</string>
    <string name="cancel">Cancelar</string>
    <string name="booking">Reservas</string>
    <string name="descbooking">Introduzca reservas de forma fácil y rápida</string>
    <string name="changestate">Cambio de estado</string>
    <string name="descchangestate">Cambie el estado de un vehículo</string>
    <string name="descstate">Compruebe el estado actual de un vehículo</string>
    <string name="state">Estado</string>
    <string name="damage">Daños</string>
    <string name="descdamage">Añadimos o quitamos daños a un vehículo</string>
    <string name="lists">Listados</string>
    <string name="desclists">Listados varios</string>
    <string name="scan">Escáner</string>
    <string name="descscan">Escaneo de documentos y/o fotos</string>
    <string name="inspect">Inspección</string>
    <string name="descinspect">Pre-Inspección y Post-Inspección</string>
    <string name="to_sign">Firmar</string>
    <string name="descsign">Firmar digitalmente un contrato</string>
    <string name="changevehicle">Cambio de vehículo</string>
    <string name="descchangevehicle">Cambiar un vehículo por otro en un contrato</string>
    <string name="checkin">Check-In</string>
    <string name="desccheckin">Recepción de clientes y finalización de contratos</string>
    <string name="closeSes">Sesión de usuario cerrada</string>
    <string name="checkpermisos">Comprobando permisos de aplicación…</string>
    <string name="produerror">Se ha producido un error</string>
    <string name="addOption">Opción bajo contratación. \nContacte con Cargestión para más información</string>
    <string name="perm_galeria">No tienes los permisos necesarios de galería. Por favor, desinstala e instala nuevamente la app y concede los permisos necesarios cuando se te pregunte</string>
    <string name="perm_cam">No tienes los permisos necesarios de cámara. Por favor, desinstala e instala nuevamente la app y concede los permisos necesarios cuando se te pregunte</string>
    <string name="fromCamera">Desde la cámara</string>
    <string name="from_gal">Desde la galería</string>
    <string name="select_suc">Seleccione una sucursal</string>
    <string name="select_extra">Seleccione un extra</string>
    <string name="e_proc_photo">Error procesando la foto, intentelo de nuevo</string>
    <string name="onlyAllowed">Sólo se permiten</string>
    <string name="onlyAllowed_2">fotos/documentos como máximo</string>
    <string name="change_user">Cambio de usuario</string>
    <string name="select_date_e">Seleccione la fecha de entrega</string>
    <string name="select_date_r">Seleccione la fecha de recogida</string>
    <string name="select_hour_e">Seleccione la hora de entrega</string>
    <string name="select_hour_r">Seleccione la hora de recogida</string>
    <string name="please_suc_e">Por favor, introduzca la sucursal de entrega</string>
    <string name="please_date_e">Por favor, introduzca la fecha de entrega</string>
    <string name="please_hour_e">Por favor, introduzca la hora de entrega</string>
    <string name="please_date_r">Por favor, introduzca la fecha de recogida</string>
    <string name="please_hour_r">Por favor, introduzca la hora de recogida</string>
    <string name="no_select_veh">No has seleccionado ningún vehículo</string>
    <string name="error_happened">Ha ocurrido un error:</string>
    <string name="error_2p">Error:</string>
    <string name="getting_veh_disp">Obteniendo listado de vehículos disponibles</string>
    <string name="data_cleaned">Se han limpiado los datos</string>
    <string name="add_ext_need_veh">Para añadir extras es necesario que selecciones un vehículo</string>
    <string name="need_sel_extra">Debe seleccionar un extra</string>
    <string name="extra_exists">El extra que estás intentando introducir ya existe</string>
    <string name="del_extra">Eliminar extra</string>
    <string name="quest_del_extra_com">¿Desea eliminar el extra: \'</string>
    <string name="yes">Sí</string>
    <string name="not">No</string>
    <string name="new_res">Nueva reserva</string>
    <string name="quest_new_res">¿Desea dar de alta esta reserva?</string>
    <string name="please_suc_r">Por favor, introduzca la sucursal de recogida</string>
    <string name="format_date_e_novalid">Formato fecha entrega no válido</string>
    <string name="format_date_r_novalid">Formato fecha recogida no válido</string>
    <string name="check_date_minus">La fecha de entrega no puede ser inferior a la fecha y hora actual, revise las fechas</string>
    <string name="check_date_mayor">La fecha de entrega no puede ser superior a la de recogida, revise las fechas</string>
    <string name="need_sel_veh">Debe seleccionar un vehículo</string>
    <string name="enter_client_name">Por favor, introduce el nombre del cliente</string>
    <string name="enter_client_tel">Por favor, introduce el nº de teléfono</string>
    <string name="enter_valid_email">Por favor, introduce un email válido</string>
    <string name="only_allowed3">fotos como máximo</string>
    <string name="add_photo">Añadir foto</string>
    <string name="no_back_camera">El dispositivo no tiene cámara trasera</string>
    <string name="close_session">Cerrar sesión</string>
    <string name="mnu_ppal">Menú principal</string>
    <string name="collect_">Recogida</string>
    <string name="office">Oficina</string>
    <string name="collect_site">Lugar de recogida</string>
    <string name="date">Fecha</string>
    <string name="hour">Hora</string>
    <string name="vehicle">Vehículo</string>
    <string name="availability">Disponibilidad</string>
    <string name="group">Grupo</string>
    <string name="car_plate">Matrícula</string>
    <string name="model">Modelo</string>
    <string name="images">Imágenes</string>
    <string name="take_photo">Tomar fotos</string>
    <string name="fotos_empty">No se han añadido fotos…</string>
    <string name="extras">Extras</string>
    <string name="add_extra">Añadir extra</string>
    <string name="client_data">Datos del cliente</string>
    <string name="name">Nombre</string>
    <string name="phone">Teléfono</string>
    <string name="mail">Email</string>
    <string name="observations">Observaciones</string>
    <string name="summary">Resumen</string>
    <string name="occupation">Ocupación</string>
    <string name="total_reserve">Total reserva</string>
    <string name="clean">Limpiar</string>
    <string name="confirm">Confirmar</string>
    <string name="tit_change_estate">Cambio de estado y situación</string>
    <string name="reference">Referencia</string>
    <string name="color">Color</string>
    <string name="locate_enrollment">Localizar Matrícula</string>
    <string name="actual_state">Estado actual</string>
    <string name="new_state">Nuevo estado</string>
    <string name="situation_zone">Zona de situación</string>
    <string name="date_format">dd/mm/yyyy</string>
    <string name="only_one_change_situation">Realizar solo un cambio de situación</string>
    <string name="select_date_from">Seleccione fecha desde</string>
    <string name="please_insert_mat">Por favor, introduzca una matrícula y pulse Localizar</string>
    <string name="select_date_to">Seleccione fecha hasta</string>
    <string name="select_date_dissapear">Seleccione fecha desaparición</string>
    <string name="select_date_recu">Seleccione fecha recuperación</string>
    <string name="please_enter_enrollment">Por favor, introduzca una matrícula</string>
    <string name="getting_information">Obteniendo información</string>
    <string name="vehicle_blocked">Este vehículo esta bloqueado hasta el</string>
    <string name="sending_information">Enviando información</string>
    <string name="procces_do_ok">Proceso realizado correctamente</string>
    <string name="enter_car_plate">Introduzca una matrícula</string>
    <string name="error_administrativo">Un error en la fecha que Usted ha introducido podría traer serias repercusiones legales a su empresa con posible sanciones administrativas y/o penales. \n¿Está Usted conforme en que la fecha introducida es la correcta?</string>
    <string name="sure_to_go">¿Está seguro que desea continuar?</string>
    <string name="peritar_">En este momento no se puede peritar el vehículo.\n¿Quiere usted peritar el vehículo en la próxima parada?</string>
    <string name="title_card_vehicle">Ficha del vehículo:</string>
    <string name="common_card_plate">0000 XYZ</string>
    <string name="free">Libre</string>
    <string name="rented">Alquilado</string>
    <string name="workshop">Taller</string>
    <string name="stolen">Sustraido</string>
    <string name="blocked">Bloqueado</string>
    <string name="actual_state_veh">Estado actual del vehículo</string>
    <string name="actual_sit_vehicle">Situación actual del vehículo</string>
    <string name="accept">Aceptar</string>
    <string name="sel_option">Seleccione una opción</string>
    <string name="asign_car_plate">Asignar matrícula</string>
    <string name="change_note">Cambiar nota</string>
    <string name="search">Buscar</string>
    <string name="find_res_to">Reserva a buscar</string>
    <string name="booking_generated">Se ha generado la reserva nº</string>
    <string name="confirm_meeting">Confirmar recepción</string>
    <string name="del_photo_quest">¿Desea borrar esta foto?</string>
    <string name="delete">Borrar</string>
    <string name="to_come_back">Volver</string>
    <string name="str_number2">000000</string>
    <string name="text_hour">hh</string>
    <string name="text_min">mm</string>
    <string name="two_zero">00</string>
    <string name="book_and_number">Reserva: 000000</string>
    <string name="ord_number">Orden número</string>
    <string name="concept">Concepto</string>
    <string name="check">Check</string>
</resources>