<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="2dp"
    android:stretchColumns="1"
    android:shrinkColumns="1">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingBottom="2dp"
        android:paddingTop="2dp">

        <TextView
            android:id="@+id/itemEquipamientoConcepto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginStart="5dp"
            android:ellipsize="end"
            android:gravity="start"
            android:singleLine="true"
            android:text="@string/concept"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#000000"
            android:textSize="16sp" />

        <Button
            android:id="@+id/itemEquipamientoCheck"
            android:layout_width="55dp"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/grisDesactivado"
            android:padding="1dp"
            android:text="@string/check"
            android:textSize="12sp"/>


        <ToggleButton
            android:id="@+id/itemEquipamientoSiNo"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/my_btn_toggle"
            android:visibility="gone"
            android:textOff="@string/not"
            android:textOn="@string/yes"
            android:textSize="12sp" />

        <ImageButton
            android:id="@+id/itemEquipamientoSiNoImg"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/boton_base_redondeado"
            android:layout_marginEnd="10dp"
            android:layout_marginVertical="5dp"
            android:visibility="gone"
            android:scaleType="fitXY"
            android:padding="6dp"
            app:srcCompat="@drawable/tick" />
    </TableRow>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@drawable/fondodegradado"
        android:orientation="horizontal"/>

</TableLayout>