<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout1"
    android:layout_width="420dip"
    android:layout_height="fill_parent"
    android:background="@drawable/fondodegradado"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dip"
    android:weightSum="1">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardListadoRecogidas1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="0dp"
        android:backgroundTint="#FFFFFF"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt"
                style="@style/textoAzulado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/ord_number"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/txtOrden"
                style="@style/texto_negro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/str_number2"
                android:textSize="40sp" />

            <Button
                android:id="@+id/btnResMeeting"
                android:backgroundTint="#FFC107"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="15dp"
                android:text="@string/accept" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>



</LinearLayout>