<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/fondodegradado"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:weightSum="1"
    android:paddingTop="20dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="10dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardListadoRecogidas1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="0dp"
        android:backgroundTint="#FFFFFF"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt"
                style="@style/texto_negro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/booking_generated"
                android:textSize="18sp" >
            </TextView>

            <TextView
                android:id="@+id/txtNumreserva"
                style="@style/texto_negro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/str_number2"
                android:textSize="40sp" >
            </TextView>

            <Button
                android:id="@+id/txtAceptarNumreserva"
                android:backgroundTint="#FFC107"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="15dip"
                android:text="@string/accept" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>



</LinearLayout>