<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:id="@+id/linearLayout1"
    android:weightSum="1"
    android:background="@drawable/fondodegradado"
    android:layout_width="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        app:cardCornerRadius="10dp"
        android:layout_margin="5dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/TextView01"
                android:textStyle="bold"
                android:textColor="#0B273E"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:gravity="center"
                android:text="@string/sel_option"
                android:textAllCaps="true"
                android:textSize="16sp"/>

            <LinearLayout
                android:id="@+id/linealBtnsOptions"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center">


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnCancelarSeleccion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:backgroundTint="@color/rojoClaro"
                    android:background="@drawable/boton_base_redondeado"
                    android:text="@string/cancel"
                    android:layout_marginEnd="25dp"
                    android:textAllCaps="true"
                    android:textColor="#fff"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnNotasSeleccion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    app:backgroundTint="@color/colorNaranBtn"
                    android:background="@drawable/boton_base_redondeado"
                    android:text="@string/change_note"
                    android:textAllCaps="true"
                    android:textColor="#fff"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnMatriculaSeleccion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/boton_base_redondeado"
                    android:text="@string/asign_car_plate"
                    android:textColor="#fff"
                    app:backgroundTint="@color/colorAzulBtn"
                    app:layout_constraintEnd_toStartOf="@+id/btnNotasSeleccion"
                    app:layout_constraintStart_toEndOf="@+id/btnCancelarSeleccion"
                    app:layout_constraintTop_toTopOf="parent" />

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>