<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout1"
    android:layout_width="420dip"
    android:layout_height="fill_parent"
    android:background="@drawable/fondodegradado"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dip"
    android:weightSum="1">

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        app:cardCornerRadius="10dp"
        android:layout_margin="5dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtMeetingNumRes"
                style="@style/texto_negro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/find_res_to"
                android:textSize="25sp" >
            </TextView>

            <EditText
                android:id="@+id/txtFindMeeting"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="8"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center|top" >

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnMeetingOk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="25dp"
                    app:backgroundTint="@color/colorNaranBtn"
                    android:background="@drawable/boton_base_redondeado"
                    android:text="@string/search"
                    android:textAllCaps="true"
                    android:textColor="#fff" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnMeetingCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:backgroundTint="@color/rojoClaro"
                    android:background="@drawable/boton_base_redondeado"
                    android:text="@string/cancel"
                    android:textAllCaps="true"
                    android:textColor="#fff"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>