<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/fondodegradado"
    android:gravity="center_vertical|center_horizontal"
    android:minWidth="400px"
    android:orientation="vertical"
    android:padding="5dip"
    android:weightSum="1">

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        app:cardCornerRadius="10dp"
        android:layout_margin="5dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView1"
                style="@style/texto_negro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/del_photo_quest"
                android:textSize="18sp" >
            </TextView>

            <ImageView
                android:id="@+id/imagenVisor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp" />

            <RelativeLayout
                android:id="@+id/relativeLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <Button
                    android:id="@+id/btnBorrarVisor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/boton_base_redondeado"
                    app:backgroundTint="@color/rojoClaro"
                    android:text="@string/delete"
                    android:textSize="16sp"
                    android:textStyle="bold">
                </Button>

                <Button
                    android:id="@+id/btnOkVisor"
                    android:background="@drawable/boton_base_redondeado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_alignParentEnd="true"
                    app:backgroundTint="#4CAF50"
                    android:text="@string/to_come_back"
                    android:textSize="16sp"
                    android:textStyle="bold">
                </Button>
            </RelativeLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>



</LinearLayout>